@@ -16,6 +16,7 @@ https://github.com/Netflix/genie/issues/38
 Bug fixes:
 https://github.com/Netflix/genie/issues/20
 https://github.com/Netflix/genie/issues/40
+https://github.com/Netflix/genie/issues/43
 
 0.21
 ----
